fix header accordion mobile second

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -229,6 +229,13 @@
 				a{
 					width: fit-content;
 				}
+				#accordionExample-header{
+					.accordion-button::after{
+						height: 1.25rem;
+						width: 1.25rem;
+						display: inline-flex;
+					}
+				}
 			}
 		}
 		.menu_on_mobile_wrapper.submenu-active{
